fixed radio button IE

--- a/assets/css/answers.css
+++ b/assets/css/answers.css
@@ -14,6 +14,7 @@
 .form-control.answerRadioButton {
     height: auto;
     width: auto;
+    background-color: transparent;
 }
 .buttonAndAnswer {
     margin-bottom: 15px;
